Fixed alignment

--- a/pages/styles.scss
+++ b/pages/styles.scss
@@ -176,6 +176,7 @@ $about_border_radius: 10px;
   .window  {
     width: 95%;
     max-width: 1250px;
+    margin: auto;
   }
 
   .header {
